[package]
name = "solana-fork-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Tokio: Async runtime (like Node.js event loop)
tokio = { version = "1", features = ["full"] }

# Axum: Web framework (like Express.js)
axum = "=0.8.6"

# Serde: JSON serialization (like JSON.stringify/parse)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NEW: Solana dependencies
litesvm = "=0.8.1"
solana-sdk = "=3.0.0"

# Add SPL token dependencies
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }

# NEW: For encoding/decoding transactions
base64 = "0.22.1"
bincode = "1.3"
bs58 = "0.5"

# liteSVM and related Solana crates (as shown in docs)
solana-pubkey = "3.0.0"
solana-keypair = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.0"
solana-message = "3.0.0"
solana-system-interface = "2.0.0"
solana-account = "3.2.0"
solana-instruction = "3.0.0"