[package]
name = "solana-fork-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "=0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
litesvm = "=0.8.1"
solana-sdk = "=3.0.0"
solana-client = "=3.0.0"
solana-account-decoder = "=3.0.0"
reqwest = { version = "0.12.24", features = ["json"] }
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }
base64 = "0.22.1"
bincode = "1.3"
bs58 = "0.5"
uuid = { version = "1.11.0", features = ["v4"] }
solana-pubkey = "3.0.0"
solana-keypair = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.0"
solana-message = "3.0.0"
solana-system-interface = "2.0.0"
solana-account = "3.2.0"
solana-instruction = "3.0.0"